src/objects/LG_ProductDetail__c.object
<CustomObject>
    <fields>
        <fullName>LG_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Product Details</relationshipLabel>
        <relationshipName>Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Details</relationshipLabel>
        <relationshipName>Product_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle Detail</fullName>
                </value>
                <value>
                    <fullName>Order Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Value__c</fullName>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Detail</label>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Product Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>